Add build options for systemd integration
To notify when ready, etc.

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,3 +1,6 @@
 src = ['dyndns.c', 'filter.c', 'ipaddr.c', 'monitor.c', 'strlcpy.c', 'web_updater.c']
 curl = dependency('libcurl')
-executable('dyndns', sources: src, dependencies: curl, install: true)
+if get_option('with-systemd')
+  add_project_arguments('-DWITH_SYSTEMD', language : 'c')
+endif
+executable('dyndns', sources : src, dependencies : [curl] , install : true)
